constructed incrementig counter module as well as the associated HTML for the user interface. on white background

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+<div id="app"></div>
+ <button id="increment">+</button>
+ <p id="output"></p>
+
+
+</div>
+
+
 <script src='js/app.js'></script>
 </body>
 </html>
