--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,22 +1,21 @@
- <!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>Counter</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
-<div id="app"></div>
- <button id="increment">+</button>
- <p id="output"></p>
+  <div id="app">
+    <button id="increment">+</button>
+    <p id="output"></p>
+  </div>
 
+  <script src="js/app.js"></script>
 
-</div>
-
-
-<script src='js/app.js'></script>
 </body>
 </html>
