adding decrement button

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -12,6 +12,7 @@
 
   <div id="app">
     <button id="increment">+</button>
+    <button id="decrement">-</button>
     <p id="output"></p>
   </div>
 
