adding user input box

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -13,6 +13,7 @@
   <div id="app">
     <button id="increment">+</button>
     <button id="decrement">-</button>
+    <input type="number" class='amount' min='-10' max='10' step='1'/>
     <p id="output"></p>
   </div>
 
