--- a/public/html/index.html
+++ b/public/html/index.html
@@ -11,8 +11,8 @@
 <body>
 
   <div id="app">
-    <button id="increment">+</button>
-    <button id="decrement">-</button>
+    <button type="add-button" class="increment">+</button>
+    <button type="minus-button" class="decrement">-</button>
     <input type="number" class='amount' min='-10' max='10' step='1'/>
     <p id="output"></p>
   </div>
