--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,23 +1,22 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
   <title>Counter</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
   <div id="app">
-    <button type="add-button" class="increment">+</button>
-    <button type="minus-button" class="decrement">-</button>
     <input type="number" class='amount' min='-10' max='10' step='1'/>
-    <p id="output"></p>
+    <button class="increment"> + </button>
+    <p class="output"></p>
+    <button class="decrement"> - </button>
   </div>
 
-  <script src="js/app.js"></script>
 
+  <script src='js/app.js'></script>
 </body>
 </html>
